--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -18,32 +18,35 @@ without prior written authorization.
 -------------------------------------------------------------------------------
 
 # Version: v2.1
-# URL: https://www.genialabile.com/cookie-policy.html
+# URL: https://genialabile.com/cookie-policy.html
 ===============================================================================
 -->
 
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-        <meta name="description" content="GENiALABILE - Non-Cookie Policy Content.">
-        <!-- Titolo -->
         <title>GENiALABILE | Cookie Policy</title>
-        <!-- Icone e Font -->
-        <link rel="icon" href="gen-favicon-rd.ico?v=2" type="image/x-icon">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-        <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
-        <!-- Header -->
-        <script>
-            fetch('header.html')
-                .then(response => response.text())
-                .then(data => {
-                    document.querySelector('head').innerHTML += data;
-                })
-                .catch(error => console.error('Errore nel caricamento header:', error));
-        </script> <!-- Header -->
-    </head>
+        <meta name="description" content="GENiALABILE - Non-Cookie Policy Content.">
+        <link rel="canonical" href="https://genialabile.com/cookie-policy.html">
+       
+    <!-- header.html -->
+    <script>
+        fetch('https://genialabile.com/header.html')
+            .then(response => response.text())
+            .then(data => {
+                document.querySelector('head').innerHTML += data;
+            })
+            .catch(error => {
+                console.error('Errore nel caricamento header:', error);
+                document.querySelector('head').innerHTML += `
+                    <meta charset="UTF-8">
+                    <meta name="viewport" content="width=device-width, initial-scale=1">
+                `;
+            });
+    </script>
+    <!-- header.html -->
+
+</head>
 
 
 <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
@@ -140,11 +143,20 @@ without prior written authorization.
 
         </main>
 
+        <!-- FADE --> 
+            <script>
+                document.addEventListener("DOMContentLoaded", function () {
+                    setTimeout(function () {
+                        document.body.classList.add("visible");
+                    }, 2000);
+                });
+            </script>
+        <!-- FADE --> 
 
         <!-- FOOTER ------> 
             <script>
                 document.addEventListener('DOMContentLoaded', function() {
-                    fetch('https://www.genialabile.com/footer.html')
+                    fetch('https://genialabile.com/footer.html')
                         .then(response => response.text())
                         .then(data => {
                             const body = document.querySelector('body');
@@ -156,16 +168,6 @@ without prior written authorization.
                 });
             </script> 
         <!-- FOOTER ------> 
-
-
-        <script>
-            document.addEventListener("DOMContentLoaded", function () {
-                setTimeout(function () {
-                    document.body.classList.add("visible");
-                }, 2000);
-            });
-        </script>
-
 
     </body>
 </html>
