--- a/footer.html
+++ b/footer.html
@@ -25,14 +25,29 @@ without prior written authorization.
 <!--// STARTLINE & SAY HI //--->
 
     <footer> 
-        <b> <!-- ALERT MODE -->
-            * We are testing the website. Please, do not take nothing as official since this message is on-screen. Thank you. *
-            <!-- // ALERT MODE --> </b><br><br><br><br><!-- // ALERT MODE -->
+        <!-- ALERT MODE -->
+        <script>
+            fetch('https://genialabile.com/wip-web.html')
+                .then(response => response.text())
+                .then(data => {
+                    document.querySelector('head').innerHTML += data;
+                })
+                .catch(error => {
+                    console.error('Errore nel caricamento alert-footer:', error);
+                    document.querySelector('head').innerHTML += `
+                        <meta charset="UTF-8">
+                        <meta name="viewport" content="width=device-width, initial-scale=1">
+                    `;
+                });
+        </script>
+        <!-- // ALERT MODE --> 
+
         © 2025 <a href="https://genialabile.com/" style="font-weight: normal">GENiALABILE</a>. All Rights Reserved.
         Advanced-GPT Project—Designed by <a href="https://github.com/seiseisette/" style="font-weight: normal">seiseisette</a>.
         <br>
-        <a href="https://orcid.org/0009-0002-6309-2937">ORCID: 0009-0002-6309-2937</a>
-
+        ORCID:
+        <a href="https://orcid.org/0009-0002-6309-2937" style="font-weight: normal">0009-0002-6309-2937</a>
+        
         <!-- Powered by <a href="https://openai.com/" style="font-weight: normal">OpenAI</a>. -->
         <br>
         <!-- <br><br><br><br><br><br><br>  style="font-size: 0.7rem;-->
@@ -40,15 +55,15 @@ without prior written authorization.
                 <br>
                 <a href="https://genialabile.com/" aria-label="Home">/<</a>
                 |
-                <a href="https://genialabile.com/contacts">CONTACT</a>
+                <a href="https://genialabile.com/contacts" aria-label="Contact & Social>CONTACT</a>
                 |
-                <a href="https://genialabile.com/terms-and-conditions">TERMS</a>
+                <a href="https://genialabile.com/terms-and-conditions" aria-label="Terms & Conditions">TERMS</a>
                 |
-                <a href="https://genialabile.com/privacy-policy">PRIVACY</a>
+                <a href="https://genialabile.com/privacy-policy" aria-label="Privacy Policy">PRIVACY</a>
                 | 
-                <a href="https://genialabile.com/cookie-policy">COOKIES</a>
+                <a href="https://genialabile.com/cookie-policy" aria-label="Cookie Policy">COOKIES</a>
                 | 
-                <a href="https://genialabile.com/accessibility" aria-label="accessibility">ACCESS</a>
+                <a href="https://genialabile.com/accessibility" aria-label="Accessibility">ACCESS</a>
             </p>
         <!-- <br><br><br><br><br><br><br> -->
     </footer>
