Corregge l'attributo 'aria-label' del link ai contatti nel footer

--- a/footer.html
+++ b/footer.html
@@ -55,7 +55,7 @@ without prior written authorization.
                 <br>
                 <a href="https://genialabile.com/" aria-label="Home">/<</a>
                 |
-                <a href="https://genialabile.com/contacts" aria-label="Contact & Social>CONTACT</a>
+                <a href="https://genialabile.com/contacts" aria-label="Contact & Social">CONTACT</a>
                 |
                 <a href="https://genialabile.com/terms-and-conditions" aria-label="Terms & Conditions">TERMS</a>
                 |
