Corregge commenti e migliora la formattazione in contacts.html e header.html

--- a/header.html
+++ b/header.html
@@ -66,11 +66,12 @@ without prior written authorization.
             location.replace(`https://${location.hostname}${location.pathname}${location.search}`);
         }
     </script>
-    <!-- Style effect graduated
+    
+    <!-- Style effect graduated -->
     <script>
         document.body.style.display = "none";
     </script>
-    Style effect graduated -->
+    <!-- Style effect graduated -->
     
 
 <!---// ENDLINE & SAY BYE //--->
