Corregge la formattazione e migliora la chiarezza nei file privacy-policy.html e terms-and-conditions.html

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -13,8 +13,7 @@ Advanced-GPT inspiring multidimensional solutions and unlocking creative potenti
 A GPT-Based Project — Designed by seiseisette.
 Repository: https://github.com/seiseisette/
 This project is no longer available as open-source. Updated: 10 Jan 2025.
-Use, distribution, or modification of this project is strictly prohibited
-without prior written authorization.
+Use, distribution, or modification of this project is strictly prohibited without prior written authorization.
 -------------------------------------------------------------------------------
 
 # Version: v2.1
@@ -57,7 +56,7 @@ without prior written authorization.
                 Last Updated: 10 January 2025
             </p>
 
-            <p class="imp-p">
+            <p class="imp-l">
                 <br><br>
                 <b>0. Welcome to GENiALABILE</b>
                 <br><br>
