--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -13,8 +13,7 @@ Advanced-GPT inspiring multidimensional solutions and unlocking creative potenti
 A GPT-Based Project — Designed by seiseisette.
 Repository: https://github.com/seiseisette/
 This project is no longer available as open-source. Updated: 10 Jan 2025.
-Use, distribution, or modification of this project is strictly prohibited
-without prior written authorization.
+Use, distribution, or modification of this project is strictly prohibited without prior written authorization.
 -------------------------------------------------------------------------------
 
 # Version: v2.1
@@ -59,7 +58,7 @@ without prior written authorization.
             </p>
     
                 
-            <p class="imp-p">
+            <p class="imp-l">
                  <br><br>
                <b>0. Welcome to GENiALABILE </b>
                 <br><br>
@@ -148,7 +147,7 @@ without prior written authorization.
                 <b>10. Contact</b>
                 <br><br>
                 If you have any questions about these Terms, please contact us at: 
-                <a href= "mailto:genialabile@gmail.com?subject=Terms%20And%20Conditions%20For" style="font-weight: normal" >
+                <a href= "mailto:genialabile@gmail.com?subject=Terms%20And%20Conditions%20For">
                     genialabile@gmail.com
                 </a>    
             </p>
@@ -165,7 +164,7 @@ without prior written authorization.
             </script>
         <!-- FADE --> 
 
-        <!-- FOOTER ------> 
+        <!-- FOOTER --> 
             <script>
                 document.addEventListener('DOMContentLoaded', function() {
                     fetch('https://genialabile.com/footer.html')
@@ -179,7 +178,7 @@ without prior written authorization.
                     .catch(error => console.error('Errore nel caricamento del footer:', error));
                 });
             </script> 
-        <!-- FOOTER ------> 
+        <!-- FOOTER --> 
 
     </body>
 </html>
