Aggiunge il link ORCID e migliora la formattazione in contacts.html

--- a/contacts.html
+++ b/contacts.html
@@ -132,21 +132,23 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     seiseisette
                 </a>
                 <p class="imp-l">
+                    ORCID:
                     <a href="https://orcid.org/0000-0002-1825-0097" target="_blank" rel="noopener noreferrer">
                         <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" alt="ORCID iD"> 
-                        https://orcid.org/0009-0002-6309-2937
+                        0009-0002-6309-2937
                     </a>
                 </p>
                 <br><br><br>
            
                 <b>5. Virtual Address</b>
+                <br>
                 <div class="card">
                     <div class="card-image-container">
                         <img src="https://genialabile.com/gen-favicon-rd.ico?v=2" alt="GENiALABILE Logo" class="card-image" loading="lazy">
                     </div>
                     <div class="card-text">
                         <p>
-                            <a href="https://genialabile.com/">GENiALABILE</a><b>·</b>⌝
+                            <a href="https://genialabile.com/">GENiALABILE</a> <b>*</b>⌝
                             <br>
                             Multidimensional Ave,
                             <br>
