Migliora la formattazione e aggiunge il link ORCID in contacts.html

--- a/contacts.html
+++ b/contacts.html
@@ -131,11 +131,10 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 <a href="https://x.com/seiseisette/">
                     seiseisette
                 </a>
-                <p class="imp-l">
-                    ORCID:
+                <p class="imp-p">
                     <a href="https://orcid.org/0000-0002-1825-0097" target="_blank" rel="noopener noreferrer">
                         <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" alt="ORCID iD"> 
-                        0009-0002-6309-2937
+                        ORCID: 0009-0002-6309-2937
                     </a>
                 </p>
                 <br><br><br>
@@ -147,7 +146,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         <img src="https://genialabile.com/gen-favicon-rd.ico?v=2" alt="GENiALABILE Logo" class="card-image" loading="lazy">
                     </div>
                     <div class="card-text">
-                        <p>
+                        <p class="imp-p">
                             <a href="https://genialabile.com/">GENiALABILE</a> <b>*</b>⌝
                             <br>
                             Multidimensional Ave,
