Riduce le dimensioni delle immagini delle schede a 60px e migliora la formattazione del link in contacts.html

--- a/contacts.html
+++ b/contacts.html
@@ -147,7 +147,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     </div>
                     <div class="card-text">
                         <p class="imp-p">
-                            <a href="https://genialabile.com/">GENiALABILE</a> <b>*</b>⌝
+                            <a href="https://genialabile.com/">GENiALABILE</a> *⌝
                             <br>
                             Multidimensional Ave,
                             <br>
