Aggiunge uno script per nascondere il corpo della pagina in l e index.html - rimosso in head

--- a/header.html
+++ b/header.html
@@ -67,11 +67,11 @@ without prior written authorization.
         }
     </script>
     
-    <!-- Style effect graduated -->
+    <!-- Style effect graduated
     <script>
         document.body.style.display = "none";
     </script>
-    <!-- Style effect graduated -->
+    Style effect graduated -->
     
 
 <!---// ENDLINE & SAY BYE //--->
