--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@ without prior written authorization.
     </script>
     <!-- header.html -->
 
+    <!-- Style effect graduated -->
+    <script>
+        document.body.style.display = "none";
+    </script>
+    <!-- Style effect graduated -->
+
 </head>
 
 <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
