--- a/index.html
+++ b/index.html
@@ -46,11 +46,27 @@ without prior written authorization.
     </script>
     <!-- header.html -->
 
-    <!-- Style effect graduated -->
-    <script>
-        document.body.style.display = "none";
-    </script>
-    <!-- Style effect graduated -->
+   <style>
+        body {
+            background-color: #000000;
+            font-family: 'Inconsolata', sans-serif;
+            font-size: 16px;
+            margin: 0 auto;
+            padding: var(--spacing);
+            /* FANCY-FX */
+            opacity: 0;
+            visibility: hidden;
+            transition: opacity 0.7s ease-in-out;
+        }
+        
+        body.visible {
+            opacity: 1;
+            visibility: visible;
+        }
+    </style>
+
+
+
 
 </head>
 
