padding 2rn a 3 + head ottimizzata per caricamento

--- a/header.html
+++ b/header.html
@@ -13,8 +13,7 @@ Advanced-GPT inspiring multidimensional solutions and unlocking creative potenti
 A GPT-Based Project — Designed by seiseisette.
 Repository: https://github.com/seiseisette/
 This project is no longer available as open-source. Updated: 10 Jan 2025.
-Use, distribution, or modification of this project is strictly prohibited
-without prior written authorization.
+Use, distribution, or modification of this project is strictly prohibited without prior written authorization.
 -------------------------------------------------------------------------------
 
 # Version: v2.1
@@ -38,28 +37,17 @@ without prior written authorization.
     <meta name="theme-color" content="#000000" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
 
-    <!-- Open
-    <meta property="og:title" content="GENiALABILE | Unique Page Title">
-    <meta property="og:description" content="Custom description for this page.">
-    <meta property="og:image" content="https://genialabile.com/assets/specific-image.jpg">
-    <meta property="og:url" content="https://genialabile.com/specific-page.html">
-    <meta property="og:type" content="website">
-    Open -->
-
-    <!-- Twitter
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="GENiALABILE | Unique Page Title">
-    <meta name="twitter:description" content="Custom description for this page.">
-    <meta name="twitter:image" content="https://genialabile.com/gen-favicon-rd.ico?v=2">
-    Twitter -->
-
     <!-- Icons and Fonts -->
     <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon" alt="GENiALABILE Icon">
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap"></noscript>
+    <link rel="preload" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"></noscript>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="https://genialabile.com/master.css">
+    <link rel="preload" href="https://genialabile.com/master.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="https://genialabile.com/master.css"></noscript>
+
     <!-- Redirect to SSL -->
     <script>
         if (location.protocol === 'http:') {
