TESTO MANCANTE RIPRISTINATO——— TEST RIMOZIONE REDIRECT SSL—— agiunta topper sp

--- a/index.html
+++ b/index.html
@@ -103,6 +103,23 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <h1>
             Tomorrow
         </h1>
+        <p>
+            with AR, VR, and immersive simulations like Sora, and augmented reality simulations for new educational and therapeutic experiences.
+                <a href="https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=Future%20vision%20of%20GENiALABILE%20-%20Predictions%20and%20developments" target="_blank">
+                    />
+                </a>
+            <br>
+        </p>
+        <h1>
+            Connections
+        </h1>
+        <p>
+            to building a future where learning and creativity transcend boundaries.
+                <a href="https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=Complete%20Contact%20GENiALABILE%20-%20And%20Social%20Media%20and%20Email%20details" target="_blank">
+                    />
+                </a>
+            <br>
+        </p>
     </main>
 
     <!-- FADE --> 
