--- a/header.html
+++ b/header.html
@@ -48,12 +48,13 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <link rel="preload" href="https://genialabile.com/master.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://genialabile.com/master.css"></noscript>
 
-    <!-- Redirect to SSL -->
+    <!-- Redirect to SSL
     <script>
         if (location.protocol === 'http:') {
             location.replace(`https://${location.hostname}${location.pathname}${location.search}`);
         }
     </script>
+     Redirect to SSL -->
     
     <!-- Style effect graduated
     <script>
