Modifica il formato del link ORCID in contacts.html per migliorare la leggibilità

--- a/contacts.html
+++ b/contacts.html
@@ -132,9 +132,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     seiseisette
                 </a>
                 <p class="imp-p">
-                    <a href="https://orcid.org/0000-0002-1825-0097" target="_blank" rel="noopener noreferrer">
-                        <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" alt="ORCID iD"> 
-                        ORCID: 0009-0002-6309-2937
+                    ORCID:
+                    <a href="https://orcid.org/0000-0002-1825-0097" target="_blank" rel="noopener noreferrer"> 
+                        0009-0002-6309-2937
                     </a>
                 </p>
                 <br><br><br>
