--- a/accessibility.html
+++ b/accessibility.html
@@ -56,7 +56,7 @@ without prior written authorization.
                 Last Updated: 10 January 2025
             </p>
 
-            <p class="imp-p">
+            <p class="imp-l">
 
                 <br><br>
                 <b>0. Welcome to GENiALABILE</b>
@@ -64,8 +64,9 @@ without prior written authorization.
                 <br><br>
                     GENiALABILE is committed to providing a website that is accessible to all users, including individuals with disabilities. 
                     <br>
-                    We strive to ensure our platform meets or exceeds the requirements of applicable laws, 
-                    including the California Consumer Privacy Act (CCPA) and the Americans with Disabilities Act (ADA).
+                    We strive to ensure our platform meets or exceeds the requirements of applicable laws.
+                    <br>
+                    Including the California Consumer Privacy Act (CCPA) and the Americans with Disabilities Act (ADA).
         
             
                 <br><br><br>
