--- a/contacts.html
+++ b/contacts.html
@@ -75,7 +75,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
                 <b>1. Website</b>
                 <br><br>
-                Our official website: 
+                On: 
                 <a href="https://genialabile.com/">
                     genialabile.com
                 </a>
@@ -83,7 +83,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
                 <b>2. Email</b>
                 <br><br>
-                Reach us at: 
+                at: 
                 <a href="mailto:genialabile@gmail.com?subject=Contact%20Request%20For">
                     genialabile@gmail.com
                 </a>
@@ -91,7 +91,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
                 <b>3. Social Media</b>
                 <br><br>
-                X (Twitter): 
+                X: 
                 <a href="https://x.com/genialabile/">
                     @genialabile
                 </a>
@@ -118,7 +118,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 -->
                 <br><br><br>
             
-                <b>4. Credits</b>
+                <b>4. Website Credits</b>
                 <br><br>
 
                 Hosted by GitHub Pages:
@@ -133,7 +133,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 </a>
                 <p class="imp-p">
                     ORCID:
-                    <a href="https://orcid.org/0000-0002-1825-0097" target="_blank" rel="noopener noreferrer"> 
+                    <a href="https://orcid.org/0000-0002-1825-0097"
+                    target="_blank" rel="noopener noreferrer" style="width: normal;"> 
                         0009-0002-6309-2937
                     </a>
                 </p>
