--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -58,7 +58,7 @@ without prior written authorization.
             Last Updated: 10 January 2025
         </p>
 
-        <p class="imp-p">
+        <p class="imp-l">
             <br><br>
             <b>0. Welcome to GENiALABILE</b>
             <br><br>
