--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -60,7 +60,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 <br><br>
                 <b>0. Welcome to GENiALABILE</b>
                 <br><br>
-                This Privacy Policy explains how we collect, use, and protect your personal information while ensuring compliance with international, European Union (EU), and United States (US) data protection laws.
+                This Privacy Policy explains how we collect, use, and protect your personal information while ensuring compliance with international.
+                <br>
+                Our policy follow the European Union (EU), and United States (US) data protection laws standard.
                 
                 <br><br><br>
                 <b>1. Information We Collect</b>
@@ -77,10 +79,11 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 <br><br><br>
                 <b>3. Google Analytics</b>
                 <br><br>
-                [·] We do not use Google Analytics to understand user interactions. It collects anonymized data such as IP addresses, geographic location, and browsing activity.<br>
-                [·] Opt-Out: Users can disable Google Analytics tracking through the 
+                [·] We do not use Google Analytics to understand user interactions.
+                <br><!---It collects anonymized data such as IP addresses, geographic location, and browsing activity.-->
+                [·] Opt-Out: Users can manage the tracking through the
                 <a href="https://tools.google.com/dlpage/gaoptout" target="_blank" style="font-weight: normal;">Google Analytics Opt-Out Browser Add-on</a>.
-
+                <!-- Users can disable Google Analytics tracking through the -->
                 <br><br><br>
                 <b>4. Your Rights</b>
                 <br><br>
