--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -85,13 +85,17 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     For EU Users (GDPR):
                     <br>
                     [·] We comply with the General Data Protection Regulation (GDPR).
-                    You have the right to access, correct, or delete your personal data. For more details, refer to our Privacy Policy.
+                    You have the right to access, correct, or delete your personal data.
+                    <br>
+                    For more details, refer to our <a href="https://genialabile.com/privacy-policy">Privacy Policy</a>.
                     <br>
                     [·] We process your data based on your consent, contract necessity, or legitimate interests as allowed by GDPR.
                     <br><br>
                     For US Users (CCPA):
                     <br>
-                    [·]	Under the California Consumer Privacy Act (CCPA), you have the right to know what personal data we collect and request its deletion. For more information, visit our Privacy Policy.
+                    [·]	Under the California Consumer Privacy Act (CCPA), you have the right to know what personal data we collect and request its deletion.
+                    <br>
+                    For more information, visit our <a href="https://genialabile.com/privacy-policy">Privacy Policy</a>.
 
                     <br><br><br>
                 <b>4. Intellectual Property</b>
@@ -133,7 +137,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     <br><br><br>
                 <b>8. Modifications</b>
                 <br><br>
-                We reserve the right to update these Terms at any time. Changes will be effective upon posting. It is your responsibility to review these Terms periodically for updates.
+                We reserve the right to update these Terms at any time. Changes will be effective upon posting.
+                <br>
+                It is your responsibility to review these Terms periodically for updates.
 
             <br><br><br>
 
