--- a/footer.html
+++ b/footer.html
@@ -13,8 +13,7 @@ Advanced-GPT inspiring multidimensional solutions and unlocking creative potenti
 A GPT-Based Project — Designed by seiseisette.
 Repository: https://github.com/seiseisette/
 This project is no longer available as open-source. Updated: 10 Jan 2025.
-Use, distribution, or modification of this project is strictly prohibited
-without prior written authorization.
+Use, distribution, or modification of this project is strictly prohibited  without prior written authorization.
 -------------------------------------------------------------------------------
 
 # Version: v2.1
@@ -25,25 +24,10 @@ without prior written authorization.
 <!--// STARTLINE & SAY HI //--->
 
     <footer> 
-        <!-- ALERT MODE -->
-        <script>
-            fetch('https://genialabile.com/wip-web.html')
-                .then(response => response.text())
-                .then(data => {
-                    document.querySelector('body').innerHTML += data;
-                })
-                .catch(error => {
-                    console.error('Errore nel caricamento alert-footer:', error);
-                    document.querySelector('head').innerHTML += `
-                        <meta charset="UTF-8">
-                        <meta name="viewport" content="width=device-width, initial-scale=1">
-                    `;
-                });
-        </script>
-        <!-- // ALERT MODE --> 
-
-        © 2025 <a href="https://genialabile.com/" style="font-weight: normal">GENiALABILE</a>. All Rights Reserved.
-        Advanced-GPT Project—Designed by <a href="https://github.com/seiseisette/" style="font-weight: normal">seiseisette</a>.
+        <p>
+            © 2025 <a href="https://genialabile.com/" style="font-weight: normal">GENiALABILE</a>. All Rights Reserved.
+            Advanced-GPT Project—Designed by <a href="https://github.com/seiseisette/" style="font-weight: normal">seiseisette</a>.
+        </p>
             <br><br>
             <p class="imp-p txt-mini">
                 <a href="https://genialabile.com/" aria-label="Home">/<</a>
