--- a/footer.html
+++ b/footer.html
@@ -13,7 +13,7 @@ Advanced-GPT inspiring multidimensional solutions and unlocking creative potenti
 A GPT-Based Project — Designed by seiseisette.
 Repository: https://github.com/seiseisette/
 This project is no longer available as open-source. Updated: 10 Jan 2025.
-Use, distribution, or modification of this project is strictly prohibited  without prior written authorization.
+Use, distribution, or modification of this project is strictly prohibited without prior written authorization.
 -------------------------------------------------------------------------------
 
 # Version: v2.1
@@ -23,12 +23,12 @@ Use, distribution, or modification of this project is strictly prohibited  witho
 
 <!--// STARTLINE & SAY HI //--->
 
-    <footer> 
+    <footer>
         <p>
             © 2025 <a href="https://genialabile.com/" style="font-weight: normal">GENiALABILE</a>. All Rights Reserved.
             Advanced-GPT Project—Designed by <a href="https://github.com/seiseisette/" style="font-weight: normal">seiseisette</a>.
         </p>
-        
+        <!--MUST-->
             <p class="imp-p txt-mini">
                 <a href="https://genialabile.com/" aria-label="Home">/<</a>
                 |
@@ -42,7 +42,7 @@ Use, distribution, or modification of this project is strictly prohibited  witho
                 | 
                 <a href="https://genialabile.com/accessibility" aria-label="Accessibility">ACCESS</a>
             </p>
-        <!-- <br><br><br><br><br><br><br> -->
+        <!--MUST-->
     </footer>
 
 <!---// ENDLINE & SAY BYE //--->
