--- a/header.html
+++ b/header.html
@@ -38,7 +38,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
 
     <!-- Icons and Fonts -->
-    <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon" alt="GENiALABILE Icon">
+    <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" " type="image/x-icon">
+    <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" " type="image/png">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap"></noscript>
     <link rel="preload" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -47,20 +48,20 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <!-- CSS -->
     <link rel="preload" href="https://genialabile.com/master.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://genialabile.com/master.css"></noscript>
-
-    <!-- Redirect to SSL
-    <script>
-        if (location.protocol === 'http:') {
-            location.replace(`https://${location.hostname}${location.pathname}${location.search}`);
-        }
-    </script>
-     Redirect to SSL -->
     
-    <!-- Style effect graduated
-    <script>
-        document.body.style.display = "none";
-    </script>
-    Style effect graduated -->
+    <!-- Style effect graduated -->
+        <script>
+            document.body.style.display = "none";
+        </script>
+    <!-- Style effect graduated -->
+
+     <!-- Redirect to SSL -->
+        <script>
+            if (location.protocol === 'http:') {
+                location.replace(`https://${location.hostname}${location.pathname}${location.search}`);
+            }
+        </script>
+    <!-- Redirect to SSL -->
     
 
 <!---// ENDLINE & SAY BYE //--->
