Aggiungi commento per chiarire la sezione header.html

--- a/header.html
+++ b/header.html
@@ -48,7 +48,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <!-- CSS -->
     <link rel="preload" href="https://genialabile.com/master.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://genialabile.com/master.css"></noscript>
-    
+    <!-- header.html -->
+     
     <!-- Style effect graduated -->
         <script>
             document.body.style.display = "none";
