pushing up & favicon in page
Nascosto flashback ner in head

--- a/contacts.html
+++ b/contacts.html
@@ -27,7 +27,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <title>GENiALABILE | Contacts</title>
         <meta name="description" content="GENiALABILE - Contacts & Social Media and Credits.">
         <link rel="canonical" href="https://genialabile.com/contacts.html">
-
+        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" " type="image/x-icon">
+        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" " type="image/png">
+    
         <!-- HEADER -->
             <script>
                 fetch('https://genialabile.com/header.html')
