--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -27,6 +27,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <title>GENiALABILE | Cookie Policy</title>
         <meta name="description" content="GENiALABILE - Non-Cookie Policy Content.">
         <link rel="canonical" href="https://genialabile.com/cookie-policy.html">
+        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" " type="image/x-icon">
+        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" " type="image/png">
        
         <!-- header.html -->
             <script>
