--- a/genialabile-access.html
+++ b/genialabile-access.html
@@ -28,6 +28,8 @@ without prior written authorization.
         <title>GENiALABILE | GPT Access</title>
         <meta name="description" content="GENiALABILE - GPT Access designed for GENiALABILE.">
         <link rel="canonical" href="https://genialabile.com/genialabile-gpt-access.html">
+        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" " type="image/x-icon">
+        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" " type="image/png">
 
         <!-- header.html -->
             <script>
