--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <title>GENiALABILE</title>
         <meta name="description" content="GENiALABILE - Advanced-GPT Project designed to inspire multidimensional solutions and unlock creativity.">
         <link rel="canonical" href="https://genialabile.com/index.html">
-        
+        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" " type="image/x-icon">
+        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" " type="image/png">
+    
         <!-- header.html -->
             <script>
                 fetch('https://genialabile.com/header.html')
