--- a/accessibility.html
+++ b/accessibility.html
@@ -27,7 +27,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <title>GENiALABILE | Accessibility</title>
         <meta name="description" content="GENiALABILE - Accessibility Front Statement.">
         <link rel="canonical" href="https://genialabile.com/accessibility.html">
-            
+        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" " type="image/x-icon">
+        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" " type="image/png">
+      
     <!-- header.html -->
             <script>
                 fetch('https://genialabile.com/header.html')
