--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -27,7 +27,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <title>GENiALABILE | Privacy Policy</title>
         <meta name="description" content="GENiALABILE - Privacy Policy Content.">
         <link rel="canonical" href="https://genialabile.com/privacy-policy.html">
-            
+        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" " type="image/x-icon">
+        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" " type="image/png">
+    
         <!-- header.html -->
             <script>
                 fetch('https://genialabile.com/header.html')
