--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -28,6 +28,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <title>GENiALABILE | Terms & Conditions</title>
         <meta name="description" content="GENiALABILE - Terms & Conditions Disclosure.">
         <link rel="canonical" href="https://genialabile.com/terms-and-conditions.html">
+        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" " type="image/x-icon">
+        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" " type="image/png">
     
         <!-- header.html -->
             <script>
